--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/knztnt/InvSys-Server#readme",
   "dependencies": {
+    "argon-design-system-react": "^1.1.0",
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
