--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.5"
   },
   "scripts": {
